07-VPC-resoures/terraform-manifest/08-routeTable_association.tf
resource "aws_route_table_association" "public_subnet_assoc" {
  count = length(var.cidr_public_subnet)
  depends_on = [aws_subnet.my_vpc_public_subnets, aws_route_table.public_route_table]
  subnet_id = element(aws_subnet.my_vpc_public_subnets[*].id, count.index)
  route_table_id = aws_route_table.public_route_table.id
}

resource "aws_route_table_association" "private_subnet_assoc" {
  count = length(var.cidr_private_subnet)
  depends_on = [ aws_subnet.my_vpc_private_subnets, aws_route_table.private_route_table ]
  subnet_id      = element(aws_subnet.my_vpc_private_subnets[*].id, count.index)
  route_table_id = aws_route_table.private_route_table[count.index].id
}
